--- a/eshop/eshop.API/eshop.API.csproj
+++ b/eshop/eshop.API/eshop.API.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eshop.Persistence\eshop.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
